--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@ghostebony/imdb",
 	"version": "0.1.1",
-	"main": "dist/index.js",
+	"main": "index.js",
 	"author": "Pedro Américo",
 	"license": "MIT",
 	"repository": "github:ghostebony/imdb",
