--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 		"pnpm": "^7.0.0"
 	},
 	"dependencies": {
-		"@ghostebony/utils": "0.0.3"
+		"@ghostebony/requests": "^0.1.1",
+		"@ghostebony/utils": "^0.1.1"
 	},
 	"devDependencies": {
 		"prettier": "^2.7.1",
